--- a/locale/es.po
+++ b/locale/es.po
@@ -200,12 +200,12 @@ msgstr ""
 
 #: ../ui/html/addimage.xml.en:68 ../ui/html/addlink.xml.en:86
 #: ../future/ui/order_addlink.xml.en:77
-msgctxt "img[title]"
+msgctxt "title attribute"
 msgid "${item/item_type}"
 msgstr ""
 
 #: ../ui/aruni/location.xml.en:11
-msgctxt "a[title]"
+msgctxt "title attribute"
 msgid "${item/name}"
 msgstr ""
 
@@ -217,17 +217,6 @@ msgstr ""
 #: ../ui/html/addlink.xml.en:76
 msgctxt "link"
 msgid "${item/short_title}"
-msgstr ""
-
-#: ../ui/html/addimage.xml.en:60 ../ui/html/addlink.xml.en:74
-msgctxt "a[title]"
-msgid "${item/title}"
-msgstr ""
-
-#: ../ui/html/addimage.xml.en:59 ../ui/html/addimage.xml.en:72
-#: ../ui/html/addlink.xml.en:90 ../future/ui/order_addlink.xml.en:81
-msgctxt "abbr[title]"
-msgid "${item/title}"
 msgstr ""
 
 #: ../ui/generic/menu.xml.en:12
@@ -252,6 +241,13 @@ msgstr ""
 #: ../tracker/ui/edit_issue.xml.en:99 ../tracker/ui/edit_issue.xml.en:107
 #: ../tracker/ui/edit_issue.xml.en:115 ../tracker/ui/edit_resource.xml.en:17
 msgctxt "option"
+msgid "${item/title}"
+msgstr ""
+
+#: ../ui/html/addimage.xml.en:59 ../ui/html/addimage.xml.en:60
+#: ../ui/html/addimage.xml.en:72 ../ui/html/addlink.xml.en:74
+#: ../ui/html/addlink.xml.en:90 ../future/ui/order_addlink.xml.en:81
+msgctxt "title attribute"
 msgid "${item/title}"
 msgstr ""
 
@@ -603,7 +599,7 @@ msgstr ""
 
 #: ../ui/html/addimage.xml.en:45 ../ui/html/addlink.xml.en:58
 #: ../future/ui/order_addlink.xml.en:61
-msgctxt "a[title]"
+msgctxt "title attribute"
 msgid "${x/title}"
 msgstr ""
 
@@ -1139,7 +1135,7 @@ msgid "August"
 msgstr "Agosto"
 
 #: ../ui/folder/browse_image.xml.en:38 ../ui/binary/Image_view.xml.en:15
-msgctxt "a[title]"
+msgctxt "title attribute"
 msgid "Back"
 msgstr ""
 
@@ -1162,7 +1158,7 @@ msgid "Body"
 msgstr "Negrita"
 
 #: ../wiki/ui/edit.xml.en:28
-msgctxt "a[title]"
+msgctxt "title attribute"
 msgid "Bold"
 msgstr "Negrita"
 
@@ -1340,7 +1336,7 @@ msgid "Choose your password"
 msgstr "Modificar clave de acceso"
 
 #: ../ui/folder/browse_image.xml.en:21 ../ui/generic/browse_table.xml.en:15
-msgctxt "input[title]"
+msgctxt "title attribute"
 msgid "Click to select/unselect all rows"
 msgstr ""
 
@@ -1859,7 +1855,7 @@ msgid "Format"
 msgstr "Formato"
 
 #: ../wiki/ui/edit.xml.en:193
-msgctxt "span[title]"
+msgctxt "title attribute"
 msgid "Format"
 msgstr "Formato"
 
@@ -1913,22 +1909,22 @@ msgid "Go To Issue"
 msgstr ""
 
 #: ../ui/PO_edit.xml.en:14
-msgctxt "a[title]"
+msgctxt "title attribute"
 msgid "Go to first message"
 msgstr ""
 
 #: ../ui/PO_edit.xml.en:19
-msgctxt "a[title]"
+msgctxt "title attribute"
 msgid "Go to last message"
 msgstr ""
 
 #: ../ui/PO_edit.xml.en:18
-msgctxt "a[title]"
+msgctxt "title attribute"
 msgid "Go to next message"
 msgstr ""
 
 #: ../ui/PO_edit.xml.en:16
-msgctxt "a[title]"
+msgctxt "title attribute"
 msgid "Go to previous message"
 msgstr ""
 
@@ -1964,7 +1960,7 @@ msgid "Heading 1"
 msgstr ""
 
 #: ../wiki/ui/edit.xml.en:210
-msgctxt "span[title]"
+msgctxt "title attribute"
 msgid "Heading 1"
 msgstr ""
 
@@ -1974,7 +1970,7 @@ msgid "Heading 2"
 msgstr ""
 
 #: ../wiki/ui/edit.xml.en:218
-msgctxt "span[title]"
+msgctxt "title attribute"
 msgid "Heading 2"
 msgstr ""
 
@@ -1984,7 +1980,7 @@ msgid "Heading 3"
 msgstr ""
 
 #: ../wiki/ui/edit.xml.en:226
-msgctxt "span[title]"
+msgctxt "title attribute"
 msgid "Heading 3"
 msgstr ""
 
@@ -1993,7 +1989,7 @@ msgid "Help"
 msgstr ""
 
 #: ../wiki/ui/edit.xml.en:138
-msgctxt "a[title]"
+msgctxt "title attribute"
 msgid "Help"
 msgstr ""
 
@@ -2060,19 +2056,19 @@ msgstr "Imagen"
 
 #: ../wiki/ui/edit.xml.en:69
 #, fuzzy
-msgctxt "a[title]"
+msgctxt "title attribute"
 msgid "Insert image"
 msgstr "Insertar Imagen"
 
 #: ../wiki/ui/edit.xml.en:62
 #, fuzzy
-msgctxt "a[title]"
+msgctxt "title attribute"
 msgid "Insert link"
 msgstr "Insertar Enlace"
 
 #: ../wiki/ui/edit.xml.en:79
 #, fuzzy
-msgctxt "a[title]"
+msgctxt "title attribute"
 msgid "Insert table"
 msgstr "Insertar tabla"
 
@@ -2111,7 +2107,8 @@ msgid "Italian"
 msgstr "Italiano"
 
 #: ../wiki/ui/edit.xml.en:35
-msgctxt "a[title]"
+#, fuzzy
+msgctxt "title attribute"
 msgid "Italic"
 msgstr "Italiano"
 
@@ -2160,7 +2157,7 @@ msgstr "Idiomas suprimidos."
 
 #: ../wiki/ui/edit.xml.en:130
 #, fuzzy
-msgctxt "a[title]"
+msgctxt "title attribute"
 msgid "Large Edit Text"
 msgstr "Editar Texto"
 
@@ -2238,7 +2235,7 @@ msgstr ""
 
 #: ../wiki/ui/edit.xml.en:122
 #, fuzzy
-msgctxt "a[title]"
+msgctxt "title attribute"
 msgid "Medium Edit Text"
 msgstr "Editar Texto"
 
@@ -2401,15 +2398,15 @@ msgstr "Nuevo recurso agregado."
 msgid "New row added."
 msgstr "Nuevo recurso agregado."
 
-#: ../ui/generic/browse_batch.xml.en:13 ../ui/binary/Image_view.xml.en:20
-#, fuzzy
-msgctxt "a[title]"
-msgid "Next"
-msgstr "Texto"
-
 #: ../ui/user/confirm_registration.xml.en:38
 #, fuzzy
 msgctxt "button"
+msgid "Next"
+msgstr "Texto"
+
+#: ../ui/generic/browse_batch.xml.en:13 ../ui/binary/Image_view.xml.en:20
+#, fuzzy
+msgctxt "title attribute"
 msgid "Next"
 msgstr "Texto"
 
@@ -2609,7 +2606,7 @@ msgstr "Lista Ordenada"
 
 #: ../wiki/ui/edit.xml.en:52
 #, fuzzy
-msgctxt "a[title]"
+msgctxt "title attribute"
 msgid "Ordered list"
 msgstr "Lista Ordenada"
 
@@ -2752,7 +2749,7 @@ msgstr "Formato:"
 
 #: ../wiki/ui/edit.xml.en:201
 #, fuzzy
-msgctxt "span[title]"
+msgctxt "title attribute"
 msgid "Preformatted"
 msgstr "Formato:"
 
@@ -2766,7 +2763,7 @@ msgid "Preview Content"
 msgstr "Previsualizar el Contenido"
 
 #: ../ui/generic/browse_batch.xml.en:11 ../ui/binary/Image_view.xml.en:17
-msgctxt "a[title]"
+msgctxt "title attribute"
 msgid "Previous"
 msgstr ""
 
@@ -3197,7 +3194,7 @@ msgstr "Piel"
 
 #: ../wiki/ui/edit.xml.en:114
 #, fuzzy
-msgctxt "a[title]"
+msgctxt "title attribute"
 msgid "Small Edit Text"
 msgstr "Editar Texto"
 
@@ -3695,7 +3692,7 @@ msgstr ""
 
 #: ../wiki/ui/edit.xml.en:45
 #, fuzzy
-msgctxt "a[title]"
+msgctxt "title attribute"
 msgid "Unordered list"
 msgstr "Lista Ordenada"
 
@@ -4131,32 +4128,3 @@ msgstr ""
 msgctxt "table cell"
 msgid "⇒ ${item/parent_path}"
 msgstr ""
-
-#, fuzzy
-#~ msgctxt "td"
-#~ msgid "Description"
-#~ msgstr "Descripción"
-
-#, fuzzy
-#~ msgctxt "link to"
-#~ msgid "Edit"
-#~ msgstr "Editar"
-
-#~ msgctxt "th"
-#~ msgid "Name"
-#~ msgstr "Nombre"
-
-#, fuzzy
-#~ msgctxt "td"
-#~ msgid "Resource"
-#~ msgstr "Nuevo Recurso"
-
-#, fuzzy
-#~ msgctxt "th"
-#~ msgid "User"
-#~ msgstr "Usuario"
-
-#, fuzzy
-#~ msgctxt "td"
-#~ msgid "Yes"
-#~ msgstr "Sí"
